qt/gen_qcolumnview.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QColumnView_override_virtual_updateGeometries(void* self, intptr_t slot);
bool QColumnView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QColumnView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QColumnView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QColumnView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QColumnView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QColumnView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QColumnView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QColumnView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QColumnView_override_virtual_closeEditor(void* self, intptr_t slot);
void QColumnView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QColumnView_override_virtual_commitData(void* self, intptr_t slot);
void QColumnView_virtualbase_commitData(void* self, QWidget* editor);
bool QColumnView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QColumnView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QColumnView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QColumnView_virtualbase_selectedIndexes(const void* self);
bool QColumnView_override_virtual_edit2(void* self, intptr_t slot);
bool QColumnView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QColumnView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QColumnView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QColumnView_override_virtual_startDrag(void* self, intptr_t slot);
void QColumnView_virtualbase_startDrag(void* self, int supportedActions);
bool QColumnView_override_virtual_viewOptions(void* self, intptr_t slot);
QStyleOptionViewItem* QColumnView_virtualbase_viewOptions(const void* self);
bool QColumnView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QColumnView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QColumnView_override_virtual_event(void* self, intptr_t slot);
bool QColumnView_virtualbase_event(void* self, QEvent* event);
bool QColumnView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QColumnView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QColumnView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QColumnView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QColumnView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QColumnView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QColumnView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QColumnView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QColumnView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QColumnView_override_virtual_dropEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QColumnView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QColumnView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QColumnView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QColumnView_override_virtual_timerEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QColumnView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QColumnView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QColumnView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QColumnView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QColumnView_virtualbase_viewportSizeHint(const void* self);
bool QColumnView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QColumnView_virtualbase_minimumSizeHint(const void* self);
bool QColumnView_override_virtual_setupViewport(void* self, intptr_t slot);
void QColumnView_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QColumnView_override_virtual_paintEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QColumnView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QColumnView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QColumnView_override_virtual_changeEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QColumnView_override_virtual_devType(void* self, intptr_t slot);
int QColumnView_virtualbase_devType(const void* self);
bool QColumnView_override_virtual_setVisible(void* self, intptr_t slot);
void QColumnView_virtualbase_setVisible(void* self, bool visible);
bool QColumnView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QColumnView_virtualbase_heightForWidth(const void* self, int param1);
bool QColumnView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QColumnView_virtualbase_hasHeightForWidth(const void* self);
bool QColumnView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QColumnView_virtualbase_paintEngine(const void* self);
bool QColumnView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QColumnView_override_virtual_enterEvent(void* self, intptr_t slot);
void QColumnView_virtualbase_enterEvent(void* self, QEvent* event);
void QColumnView_virtualbase_leaveEvent(void* self, QEvent* event);