qt/gen_qcolumnview.nim

proc fcQColumnView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_updateGeometries".}
proc fQColumnView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QColumnView_virtualbase_verticalScrollbarAction".}
proc fcQColumnView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_verticalScrollbarAction".}
proc fQColumnView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QColumnView_virtualbase_horizontalScrollbarAction".}
proc fcQColumnView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_horizontalScrollbarAction".}
proc fQColumnView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QColumnView_virtualbase_verticalScrollbarValueChanged".}
proc fcQColumnView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_verticalScrollbarValueChanged".}
proc fQColumnView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QColumnView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQColumnView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_horizontalScrollbarValueChanged".}
proc fQColumnView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QColumnView_virtualbase_closeEditor".}
proc fcQColumnView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_closeEditor".}
proc fQColumnView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QColumnView_virtualbase_commitData".}
proc fcQColumnView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_commitData".}
proc fQColumnView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QColumnView_virtualbase_editorDestroyed".}
proc fcQColumnView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_editorDestroyed".}
proc fQColumnView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QColumnView_virtualbase_selectedIndexes".}
proc fcQColumnView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_selectedIndexes".}
proc fQColumnView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QColumnView_virtualbase_edit2".}
proc fcQColumnView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_edit2".}
proc fQColumnView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QColumnView_virtualbase_selectionCommand".}
proc fcQColumnView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_selectionCommand".}
proc fQColumnView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QColumnView_virtualbase_startDrag".}
proc fcQColumnView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_startDrag".}
proc fQColumnView_virtualbase_viewOptions(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_viewOptions".}
proc fcQColumnView_override_virtual_viewOptions(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_viewOptions".}
proc fQColumnView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QColumnView_virtualbase_focusNextPrevChild".}
proc fcQColumnView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_focusNextPrevChild".}
proc fQColumnView_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QColumnView_virtualbase_event".}
proc fcQColumnView_override_virtual_event(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_event".}
proc fQColumnView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QColumnView_virtualbase_viewportEvent".}
proc fcQColumnView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_viewportEvent".}
proc fQColumnView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_mousePressEvent".}
proc fcQColumnView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_mousePressEvent".}
proc fQColumnView_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_mouseMoveEvent".}
proc fcQColumnView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_mouseMoveEvent".}
proc fQColumnView_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_mouseReleaseEvent".}
proc fcQColumnView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_mouseReleaseEvent".}
proc fQColumnView_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_mouseDoubleClickEvent".}
proc fcQColumnView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_mouseDoubleClickEvent".}
proc fQColumnView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_dragEnterEvent".}
proc fcQColumnView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_dragEnterEvent".}
proc fQColumnView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_dragMoveEvent".}
proc fcQColumnView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_dragMoveEvent".}
proc fQColumnView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_dragLeaveEvent".}
proc fcQColumnView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_dragLeaveEvent".}
proc fQColumnView_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_dropEvent".}
proc fcQColumnView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_dropEvent".}
proc fQColumnView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_focusInEvent".}
proc fcQColumnView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_focusInEvent".}
proc fQColumnView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_focusOutEvent".}
proc fcQColumnView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_focusOutEvent".}
proc fQColumnView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_keyPressEvent".}
proc fcQColumnView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_keyPressEvent".}
proc fQColumnView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_timerEvent".}
proc fcQColumnView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_timerEvent".}
proc fQColumnView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_inputMethodEvent".}
proc fcQColumnView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_inputMethodEvent".}
proc fQColumnView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QColumnView_virtualbase_eventFilter".}
proc fcQColumnView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_eventFilter".}
proc fQColumnView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_viewportSizeHint".}
proc fcQColumnView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_viewportSizeHint".}
proc fQColumnView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_minimumSizeHint".}
proc fcQColumnView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_minimumSizeHint".}
proc fQColumnView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QColumnView_virtualbase_setupViewport".}
proc fcQColumnView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_setupViewport".}
proc fQColumnView_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QColumnView_virtualbase_paintEvent".}
proc fcQColumnView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_paintEvent".}
proc fQColumnView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QColumnView_virtualbase_wheelEvent".}
proc fcQColumnView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_wheelEvent".}
proc fQColumnView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QColumnView_virtualbase_contextMenuEvent".}
proc fcQColumnView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_contextMenuEvent".}
proc fQColumnView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QColumnView_virtualbase_changeEvent".}
proc fcQColumnView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_changeEvent".}
proc fQColumnView_virtualbase_devType(self: pointer, ): cint{.importc: "QColumnView_virtualbase_devType".}
proc fcQColumnView_override_virtual_devType(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_devType".}
proc fQColumnView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QColumnView_virtualbase_setVisible".}
proc fcQColumnView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_setVisible".}
proc fQColumnView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QColumnView_virtualbase_heightForWidth".}
proc fcQColumnView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_heightForWidth".}
proc fQColumnView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QColumnView_virtualbase_hasHeightForWidth".}
proc fcQColumnView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_hasHeightForWidth".}
proc fQColumnView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_paintEngine".}
proc fcQColumnView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_paintEngine".}
proc fQColumnView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_keyReleaseEvent".}
proc fcQColumnView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_keyReleaseEvent".}
proc fQColumnView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_enterEvent".}
proc fcQColumnView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_enterEvent".}
proc fQColumnView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_leaveEvent".}
